DB阅读器增加对弈功能

--- a/lib2sgf.html
+++ b/lib2sgf.html
@@ -16,6 +16,15 @@
 </head>
 
 <body>
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?c17b8a02edb4aff101e8b42ed01aca1b";
+			var s = document.getElementsByTagName("script")[0]; 
+			s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
 	<div id="w">
 		<div id="title">
 			LIB2SGF
