--- a/puzzle.html
+++ b/puzzle.html
@@ -19,7 +19,16 @@
 </head>
 
 <body>
-    <version v="v2024.11"></version>
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?c17b8a02edb4aff101e8b42ed01aca1b";
+			var s = document.getElementsByTagName("script")[0]; 
+			s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
+    <version v="v2024.12"></version>
     <script src="script/loadFile.js"></script>
     <script src="puzzle/sources.js"></script>
     <script src="script/loadApp.js"></script>
