--- a/reset.html
+++ b/reset.html
@@ -16,6 +16,15 @@
 </head>
 
 <body>
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?c17b8a02edb4aff101e8b42ed01aca1b";
+			var s = document.getElementsByTagName("script")[0]; 
+			s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
     <script>
         document.body.innerHTML += `准备重置 摆棋小工具.....<br>`
         Promise.resolve()
