--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
 </head>
 
 <body>
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?c17b8a02edb4aff101e8b42ed01aca1b";
+			var s = document.getElementsByTagName("script")[0]; 
+			s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
     <script>
     	let scale = window.screen.width / 480;
         //console.log("scale=" + scale);
