--- a/setTheme.html
+++ b/setTheme.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -15,7 +16,7 @@
     <link rel="apple-touch-icon" sizes="57x57" href="icon(57x57).png" type="image/png" />
     <link rel="apple-touch-icon" sizes="72x72" href="icon(72x72).png" type="image/png" />
     <link rel="apple-touch-icon" sizes="114x114" href="icon(114x114).png" type="image/png" />
-    <title>五子棋涂鸦</title>
+    <title>设置主题色</title>
 </head>
 
 <body>
@@ -30,7 +31,7 @@
 	</script>
     <version v="v2024.15"></version>
     <script src="script/loadFile.js"></script>
-    <script src="tuya/sources.js"></script>
+    <script src="setTheme/sources.js"></script>
     <script src="script/loadApp.js"></script>
 </body>
 
