支持编辑主题导入导出

--- a/help/renjuhelp/instructions.html
+++ b/help/renjuhelp/instructions.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>使用说明</title>
+    <link rel="preload" href="../help.css" as="style" />
+    <link rel="preload" href="../help.js" as="script" />
     <link href="../help.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -374,20 +376,20 @@
             <mark>PS：带有▼标记的按钮都可以弹出菜单。在棋盘上面长按(或者鼠标右键)可以弹出菜单。</mark>
         </ul>
     </h4>
-    <h4>附加说明
-        <ul>...
-            <li>浏览器的兼容性</li>
+    <h4>浏览器的兼容性
             <ul id="browser">...
                 <li>安卓手机推荐使用Chrome, Opera浏览器</li>
                 <li>苹果手机推荐使用Safari浏览器</li>
                 <li>经过测试发现，手机QQ自带浏览器也支持大部分功能</li>
                 <mark>如果有部分功能不能正常运行，请尝试使用推荐的浏览器，并更新到最新版本。</mark>
             </ul>
-            <li>离线工作</li>
+	</h4>
+	<h4>离线工作
             <ul id="offLine">...
                 <text>软件会自动保存你打开过的网页，用来支持离线运行。当你在没有网络的情况下，也可以正常打开软件。你不需要担心更新的问题，直到你下次连上网络时，软件会自动为你下载最新版本。</text>
             </ul>
-            <li>如何下载app</li>
+    </h4>
+	<h4>如何下载app
             <ul id="pwa">...
                 <text>在最新版的浏览器上面，支持将网页保存为一个app。你可以获得类似原生app一样的体验。请参考下面的操作进行设置。</text>
                 <ul>...
@@ -411,8 +413,7 @@
                     </ul>
                 </ul>
             </ul>
-        </ul>
-    </h4>
+	</h4>
 </body>
 
 </html>
