--- a/instructions.html
+++ b/instructions.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -15,10 +16,10 @@
     <link rel="apple-touch-icon" sizes="57x57" href="icon(57x57).png" type="image/png" />
     <link rel="apple-touch-icon" sizes="72x72" href="icon(72x72).png" type="image/png" />
     <link rel="apple-touch-icon" sizes="114x114" href="icon(114x114).png" type="image/png" />
-    <title>制作VCF</title>
+    <title>使用说明</title>
     <link rel="preload" href="setTheme/preloadTheme.js" as="script" />
     <link rel="preload" href="script/loadFile.js" as="script" />
-    <link rel="preload" href="makevcf/sources.js" as="script" />
+    <link rel="preload" href="instructions/sources.js" as="script" />
     <link rel="preload" href="script/loadApp.js" as="script" />
 </head>
 
@@ -26,9 +27,10 @@
     <version v="v2024.15"></version>
     <script src = "setTheme/preloadTheme.js"></script>
     <script src="script/loadFile.js"></script>
-    <script src="makevcf/sources.js"></script>
+    <script src="instructions/sources.js"></script>
     <script src="script/loadApp.js"></script>
 </body>
 
 </html>
+
 
