--- a/setTheme.html
+++ b/setTheme.html
@@ -17,19 +17,15 @@
     <link rel="apple-touch-icon" sizes="72x72" href="icon(72x72).png" type="image/png" />
     <link rel="apple-touch-icon" sizes="114x114" href="icon(114x114).png" type="image/png" />
     <title>设置主题色</title>
+    <link rel="preload" href="setTheme/preloadTheme.js" as="script" />
+    <link rel="preload" href="script/loadFile.js" as="script" />
+    <link rel="preload" href="setTheme/sources.js" as="script" />
+    <link rel="preload" href="script/loadApp.js" as="script" />
 </head>
 
 <body>
-	<script>
-		var _hmt = _hmt || [];
-		(function() {
-			var hm = document.createElement("script");
-			hm.src = "https://hm.baidu.com/hm.js?c17b8a02edb4aff101e8b42ed01aca1b";
-			var s = document.getElementsByTagName("script")[0]; 
-			s.parentNode.insertBefore(hm, s);
-		})();
-	</script>
     <version v="v2024.15"></version>
+    <script src = "setTheme/preloadTheme.js"></script>
     <script src="script/loadFile.js"></script>
     <script src="setTheme/sources.js"></script>
     <script src="script/loadApp.js"></script>
