--- a/help/renjuhelp/power.html
+++ b/help/renjuhelp/power.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>五子棋的子力</title>
+    <link rel="preload" href="../help.css" as="style" />
+    <link rel="preload" href="../help.js" as="script" />
     <link href="../help.css" rel="stylesheet" type="text/css">
 </head>
 
