--- a/help/renjuhelp/renjuhelp.html
+++ b/help/renjuhelp/renjuhelp.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>摆棋工具帮助文档</title>
+    <link rel="preload" href="../help.css" as="style" />
+    <link rel="preload" href="../help.js" as="script" />
     <link href="../help.css" rel="stylesheet" type="text/css">
 </head>
 
