--- a/help/renjuhelp/versionHistory.html
+++ b/help/renjuhelp/versionHistory.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>更新历史</title>
+    <link rel="preload" href="../help.css" as="style" />
+    <link rel="preload" href="../help.js" as="script" />
     <link href="../help.css" rel="stylesheet" type="text/css">
     <style>
         .line {
