--- a/reset.html
+++ b/reset.html
@@ -1,76 +1,34 @@
+
 <!DOCTYPE html>
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
-    <style>
-        body {
-            font-size: 50px;
-            text-align: center;
-            line-height: 1.8;
-            width: 100%;
-        }
-    </style>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Cache-Control" content="no-store" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-touch-fullscreen" content="yes" /> 
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="摆棋小工具" />
+    <meta name="x5-page-mode" content="app" />
+    <link rel="shortcut icon" sizes="192x192" href="icon(192x192).png" type="image/png" />
+    <link rel="icon" href="icon(128x128).ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="57x57" href="icon(57x57).png" type="image/png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="icon(72x72).png" type="image/png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="icon(114x114).png" type="image/png" />
+    <title>重置数据</title>
+    <link rel="preload" href="setTheme/preloadTheme.js" as="script" />
+    <link rel="preload" href="script/loadFile.js" as="script" />
+    <link rel="preload" href="reset/sources.js" as="script" />
+    <link rel="preload" href="script/loadApp.js" as="script" />
 </head>
 
 <body>
-	<script>
-		var _hmt = _hmt || [];
-		(function() {
-			var hm = document.createElement("script");
-			hm.src = "https://hm.baidu.com/hm.js?c17b8a02edb4aff101e8b42ed01aca1b";
-			var s = document.getElementsByTagName("script")[0]; 
-			s.parentNode.insertBefore(hm, s);
-		})();
-	</script>
-    <script>
-        document.body.innerHTML += `准备重置 摆棋小工具.....<br>`
-        Promise.resolve()
-            .then(() => {
-                document.body.innerHTML += `搜索 serviceWorker.....<br>`
-                return "serviceWorker" in navigator &&
-                    "getRegistrations" in navigator.serviceWorker &&
-                    navigator.serviceWorker.getRegistrations()
-                    .then(registrations => {
-                        registrations.map(registration => {
-                            if (window.location.href.indexOf(registration.scope) + 1) {
-                                registration.unregister()
-                                document.body.innerHTML += `删除 serviceWorker.....<br>${registration.scope}<br>`
-                            }
-                        })
-                    })
-            })
-            .then(() => {
-                document.body.innerHTML += `搜索 caches.....<br>`
-                return "caches" in window &&
-                    caches.keys()
-                    .then(keys => {
-                        keys.map(key => {
-                            caches.delete(key)
-                            document.body.innerHTML += `删除 cache.....${key}<br>`
-                        })
-                    })
-            })
-            .then(() =>{
-                document.body.innerHTML += `搜索 localStorage.....<br>`
-                "localStorage" in window &&
-                Object.keys(localStorage).map(key => {
-                    localStorage.removeItem(key)
-                    document.body.innerHTML += `删除 ${key}<br>`
-                })
-            })
-            .then(() => {
-                document.body.innerHTML += `OK<br>`
-            })
-            .then(() => {
-                setTimeout(() => window.top.location.href = "index.html", 5000);
-            })
-            .catch(err => {
-                document.body.innerHTML += `出错了<br>${err}<br>${err.stack}<br>`
-            })
-    </script>
+    <version v="v2024.15"></version>
+    <script src = "setTheme/preloadTheme.js"></script>
+    <script src="script/loadFile.js"></script>
+    <script src="reset/sources.js"></script>
+    <script src="script/loadApp.js"></script>
 </body>
 
 </html>
