--- a/help/renjuhelp/renjuhelp.html
+++ b/help/renjuhelp/renjuhelp.html
@@ -50,12 +50,12 @@
             </li>
             <li>
             	<h4>
-            		<a onclick='window.open("../../reset.html", "_self")'>重置数据</a>
+            		<a onclick='window.open("./versionHistory.html", "_self")'>更新历史</a>
             	</h4>
             </li>
             <li>
             	<h4>
-            		<a onclick='window.open("./versionHistory.html", "_self")'>更新历史</a>
+            		<a onclick='window.open("../../reset.html", "_top")'>检查更新</a>
             	</h4>
             </li>
             <li>
