--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<script> location.href = "renju/index.html" </script>
+	<script> serviceWorker.registerServiceWorker().then(() => location.href = "renju/index.html") </script>
 </body>
 
 </html>
