--- a/instructions.html
+++ b/instructions.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<script> location.href = "renju/instructions.html" </script>
+	<script>serviceWorker.registerServiceWorker().then(() => location.href = "renju/instructions.html") </script>
 </body>
 
 </html>
