--- a/lib2sgf.html
+++ b/lib2sgf.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<script> location.href = "renju/lib2sgf.html" </script>
+	<script>serviceWorker.registerServiceWorker().then(() => location.href = "renju/lib2sgf.html") </script>
 </body>
 
 </html>
