--- a/renju.html
+++ b/renju.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<script> location.href = "renju/renju.html" </script>
+	<script>serviceWorker.registerServiceWorker().then(() => location.href = "renju/renju.html") </script>
 </body>
 
 </html>
