--- a/renjueditor.html
+++ b/renjueditor.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<script> location.href = "renju/renjueditor.html" </script>
+	<script>serviceWorker.registerServiceWorker().then(() => location.href = "renju/renjueditor.html") </script>
 </body>
 
 </html>
