--- a/reset.html
+++ b/reset.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<script> location.href = "renju/reset.html" </script>
+	<script>serviceWorker.registerServiceWorker().then(() => location.href = "renju/reset.html") </script>
 </body>
 
 </html>
