--- a/setTheme.html
+++ b/setTheme.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<script> location.href = "renju/setTheme.html" </script>
+	<script>serviceWorker.registerServiceWorker().then(() => location.href = "renju/setTheme.html") </script>
 </body>
 
 </html>
