--- a/puzzle.html
+++ b/puzzle.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<script> location.href = "renju/puzzle.html" </script>
+	<script>serviceWorker.registerServiceWorker().then(() => location.href = "renju/puzzle.html") </script>
 </body>
 
 </html>
